<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">feedback_test_3</string>
    <string name="action_settings">Settings</string>
    <string name="edittext_hint1">Enter feedback</string>
    <string name="previewButton_text">Preview</string>
    <string name="sendButton_text">Send</string>
    <string name="title_activity_process_list">ProcessList</string>
    <string name="title_activity_log_list">LogList</string>
    <string name="description">Something</string>
    <string name="systemdata"> Include system data</string>
    <string name="snapshot"> Include screenshot</string>
    <string name="prompt1">"Send as : "</string>
    <string name="prompt2">" Anonymous"</string>
    <string name="title_activity_preview">Preview</string>
    <string name="title_activity_feedback_dialog">FeedbackDialog</string>
    <string name="hello_world">Hello world!</string>

</resources>